k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: presidio-nl-v2
  labels:
    name: presidio-nl-v2
